--- a/Errata3.html
+++ b/Errata3.html
@@ -780,7 +780,7 @@ mso-ansi-language:EN-AU;mso-bidi-font-weight:bold">(Morgan Kaufmann)<o:p></o:p><
 &quot;Verdana&quot;,sans-serif;mso-font-kerning:1.0pt;mso-ansi-language:EN-AU"><o:p>&nbsp;</o:p></span></i></b></p>
 
 <p class="MsoNormal" align="center" style="text-align:center"><span style="font-family:&quot;Verdana&quot;,sans-serif;mso-font-kerning:1.0pt;mso-ansi-language:
-EN-AU;mso-bidi-font-weight:bold">Last updated: 2024 June 21</span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p></o:p></span></p>
+EN-AU;mso-bidi-font-weight:bold">Last updated: 2024 November 6</span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p></o:p></span></p>
 
 <p class="MsoNormal"><span lang="EN-US" style="font-size:8.0pt;mso-bidi-font-size:
 10.0pt"><o:p>&nbsp;</o:p></span></p>
@@ -794,12 +794,12 @@ EN-AU;mso-bidi-font-weight:bold">Last updated: 2024 June 21</span><span lang="EN
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">If
 you spot any other errors in this third edition, please e-mail them to Terry
 Halpin at </span><span lang="EN-US"><a href="mailto:t.halpin@live.com"><span style="font-family:&quot;Verdana&quot;,sans-serif">t.halpin@live.com</span></a></span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">. <o:p></o:p></span></p>
-
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
+
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">The
 following corrections should be made to the <i style="mso-bidi-font-style:normal">first</i>
-printing. <i style="mso-bidi-font-style:normal">(Note: Currently, no corrections have been found)</i>. To determine the print version of your copy of the book, look at the
+printing. <i style="mso-bidi-font-style:normal"></i>. To determine the print version of your copy of the book, look at the
 row of digits below the copyright notice on the verso of the main title page:
 the final digit denotes the print version (e.g. 1 = first printing, 2 = second
 printing). <o:p></o:p></span></p>
@@ -808,6 +808,11 @@ printing). <o:p></o:p></span></p>
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">The
 symbol "-->" means "is replaced by".<o:p></o:p></span></p>   
+
+<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
+
+<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 925, second constraint formula: Insert closing parenthesis so it reads "ic (c1, c2, n) requires (hasCountryName(c1,n) and hasCountryName(c2,n)) implies c1 = c2
+".<o:p></o:p></span></p>
  
 <p class="MsoBodyText3"><span lang="EN-US" style="font-size:8.0pt;font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
