--- a/Errata3.html
+++ b/Errata3.html
@@ -780,7 +780,7 @@ mso-ansi-language:EN-AU;mso-bidi-font-weight:bold">(Morgan Kaufmann)<o:p></o:p><
 &quot;Verdana&quot;,sans-serif;mso-font-kerning:1.0pt;mso-ansi-language:EN-AU"><o:p>&nbsp;</o:p></span></i></b></p>
 
 <p class="MsoNormal" align="center" style="text-align:center"><span style="font-family:&quot;Verdana&quot;,sans-serif;mso-font-kerning:1.0pt;mso-ansi-language:
-EN-AU;mso-bidi-font-weight:bold">Last updated: 2024 November 6</span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p></o:p></span></p>
+EN-AU;mso-bidi-font-weight:bold">Last updated: 2024 November 13</span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p></o:p></span></p>
 
 <p class="MsoNormal"><span lang="EN-US" style="font-size:8.0pt;mso-bidi-font-size:
 10.0pt"><o:p>&nbsp;</o:p></span></p>
@@ -809,12 +809,18 @@ printing). <o:p></o:p></span></p>
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">The
 symbol "-->" means "is replaced by".<o:p></o:p></span></p>   
 
-<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
+<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>      
+
+<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 289, sentence 1: "constraints" --> "constraints on non-empty relations".<o:p></o:p></span></p>     
+
+<p class="MsoBodyText3"><span lang="EN-US" style="font-size:8.0pt;font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
+
+<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 459, Figure 10.60(a): Add the predicate text "is monolingual" to the unary predicate.<o:p></o:p></span></p>     
+
+<p class="MsoBodyText3"><span lang="EN-US" style="font-size:8.0pt;font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 925, second constraint formula: Insert closing parenthesis so it reads "ic (c1, c2, n) requires (hasCountryName(c1,n) and hasCountryName(c2,n)) implies c1 = c2
-".<o:p></o:p></span></p>
- 
-<p class="MsoBodyText3"><span lang="EN-US" style="font-size:8.0pt;font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
+".<o:p></o:p></span></p>    
 
 <p class="MsoNormal" style="text-align:justify;line-height:12.0pt;mso-line-height-rule:
 exactly;tab-stops:0cm 19.85pt 39.65pt 59.5pt 79.35pt 99.2pt 119.0pt 138.9pt 158.75pt 178.55pt 198.4pt 218.25pt 238.05pt 257.9pt 277.8pt 297.65pt 317.45pt 337.3pt 357.15pt"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">
