--- a/homepage.html
+++ b/homepage.html
@@ -73,7 +73,7 @@
 			</table>
 
 			<hr />
-			<p><font face="Verdana"><i>Last updated: 2024 November 13</i>&nbsp; </font></p>
+			<p><font face="Verdana"><i>Last updated: 2024 November 28</i>&nbsp; </font></p>
 			&nbsp; 
                 
 
@@ -198,6 +198,7 @@
 
 			<p><font face="Verdana"><font face="Verdana"><a name="updates"><b>Recent Updates log</b></a>:<br />
 			<font size="-1"> 
+      2024 Nov 28: Updated book errata for <i>Information Modeling and Relational Databases, 3rd edition</i> (this page).<br />  
       2024 Nov 13: Updated book errata for <i>Information Modeling and Relational Databases, 3rd edition</i> (this page).<br />  
       2024 Nov 6: Updated book errata for <i>Information Modeling and Relational Databases, 3rd edition</i> (this page).<br />
       2024 July 12: Added links to the video of my EROSS-2020 presentation "Reference Scheme Modelling" and the following Q&A session (see Resources page).<br /> 
