--- a/Errata3.html
+++ b/Errata3.html
@@ -812,8 +812,8 @@ symbol "-->" means "is replaced by".<o:p></o:p></span></p>
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>      
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 288, Figure 7.21: Symmetric and antisymmetric relations should overlap (as purely reflexive relations are their intersection), and strongly intransitive relations should be a proper subset of acyclic relations. Here is an updated version of Figure 7_21:<o:p></o:p></span></p>   <p></p>   
-<p></p> <img src="images/Fig7_21new.jpg" width="686" height="446" />    
-<p></p>
+<p></p> <img src="images/Fig7_21new.jpg" width="686" height="446" alt="new figure 7_21" title = ""/>    
+<p></p>    
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 289, sentence 1: "constraints" --> "constraints on non-empty relations".<o:p></o:p></span></p>     
 
