--- a/Errata3.html
+++ b/Errata3.html
@@ -780,7 +780,7 @@ mso-ansi-language:EN-AU;mso-bidi-font-weight:bold">(Morgan Kaufmann)<o:p></o:p><
 &quot;Verdana&quot;,sans-serif;mso-font-kerning:1.0pt;mso-ansi-language:EN-AU"><o:p>&nbsp;</o:p></span></i></b></p>
 
 <p class="MsoNormal" align="center" style="text-align:center"><span style="font-family:&quot;Verdana&quot;,sans-serif;mso-font-kerning:1.0pt;mso-ansi-language:
-EN-AU;mso-bidi-font-weight:bold">Last updated: 2024 November 28</span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p></o:p></span></p>
+EN-AU;mso-bidi-font-weight:bold">Last updated: 2025 July 14</span><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif"><o:p></o:p></span></p>
 
 <p class="MsoNormal"><span lang="EN-US" style="font-size:8.0pt;mso-bidi-font-size:
 10.0pt"><o:p>&nbsp;</o:p></span></p>
@@ -820,6 +820,8 @@ symbol "-->" means "is replaced by".<o:p></o:p></span></p>
 <p class="MsoBodyText3"><span lang="EN-US" style="font-size:8.0pt;font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 459, Figure 10.60(a): Add the predicate text "is monolingual" to the unary predicate.<o:p></o:p></span></p>     
+<p>  
+<p class="MsoBodyText3"><span lang="EN-US" style="font-family:&quot;Verdana&quot;,sans-serif">Page 792, Figure 15.22(b): "F(in Y)" --> "F[in Y]".<o:p></o:p></span></p>     
 
 <p class="MsoBodyText3"><span lang="EN-US" style="font-size:8.0pt;font-family:&quot;Verdana&quot;,sans-serif"><o:p>&nbsp;</o:p></span></p>
 
