updated author awards

--- a/halpin.html
+++ b/halpin.html
@@ -19,7 +19,7 @@
 
 <p>Dr. Terry Halpin is internationally recognized as the leading authority on Object-Role Modeling (ORM). His academic career included senior lecturer and professor positions in Australia, as well as professorships in computer science at universities in the USA and Malaysia. His industry experience includes several years in data modeling technology at various companies including Microsoft Corporation. He later worked as a research scientist at LogicBlox, and as a data modeling consultant for the European Space Agency. His research focuses on conceptual modeling and conceptual query technology. 
 
-<p> Dr. Halpin is the recipient of the <a href = "http://www.dama.org">DAMA</a> International Academic Achievement Award (2003) and the IFIP Outstanding Service Award (2006).
+<p> Dr. Halpin is the recipient of the <a href = "http://www.dama.org">DAMA</a> International Academic Achievement Award (2003), the IFIP Outstanding Service Award (2006), and was recognized as an ER Fellow (2024).
 
 
 <p>He is a member of <a href = "http://home.dei.polimi.it/pernici/ifip81/">IFIP WG 8.1</a> (Design and Evaluation of Information Systems), is an editor or reviewer for several academic journals and international program committees, has co-chaired several international workshops on modeling, and has presented at dozens of international conferences in both industry and academia. For many years, his research has focused on conceptual modeling and conceptual query technology for information systems, using a business rules approach. His doctoral thesis formalized Object-Role Modeling (ORM/NIAM), and his publications include over 200 technical papers, and ten books, including <i>Information Modeling and Relational Databases</i>.
