--- a/homepage.html
+++ b/homepage.html
@@ -200,6 +200,7 @@
 
 			<p><font face="Verdana"><font face="Verdana"><a name="updates"><b>Recent Updates log</b></a>:<br />
 			<font size="-1"> 
+      2025 July 14: Updated book errata for <i>Information Modeling and Relational Databases, 3rd edition</i>, and author details (this page).<br />
       2025 April 24: Added notice about the passing of Ken Evans </i> (this page).<br />
       2024 Nov 28: Updated book errata for <i>Information Modeling and Relational Databases, 3rd edition</i> (this page).<br />  
       2024 Nov 13: Updated book errata for <i>Information Modeling and Relational Databases, 3rd edition</i> (this page).<br />  
