updated resources file

--- a/resources.html
+++ b/resources.html
@@ -49,7 +49,7 @@
 			<p><font face="Verdana"><b>The ORM Foundation</b> </font></p>
 
 			<hr />
-			<p><font face="Verdana"><a href="http://www.ormfoundation.org/Default.aspx">The ORM Foundation</a> is a non-profit organization dedicated to the promotion of the fact-oriented approach to information modeling, and is a major resource site for ORM as well as other fact-oriented modeling approaches. </font></p>
+			<p><font face="Verdana">The ORM Foundation</a> was a non-profit organization dedicated to the promotion of the fact-oriented approach to information modeling, but is no longer available. Its director Ken Evans died of cancer in 2024.</font></p>
 			
 			<p><font face="Verdana"><b>ORM formal syntax and semantics</b> </font></p>
 
@@ -84,7 +84,7 @@
 			<p><font face="Verdana"><a name="tools"><b>ORM tools</b></a> </font></p>
 
 			<hr />
-			<p><font face="Verdana"><b>(1) NORMA</b> (Natural ORM Architect) is a modeling tool under development that supports the next generation of ORM (ORM 2). Implemented as an open-source plug-in to Microsoft&#39;s Visual Studio .NET, NORMA also runs as a plug-in to a free Community Edition of Visual Studio (2013 or later -- see home page for more details). For further details on the ORM 2 graphical notation, see <a href="pdf/ORM2_TechReport1.pdf" target="_blank">ORM 2 Technical Report 1</a>. The official version of NORMA from ORM Solutions is available on SourceForge. A version of NORMA is also available on <a href="http://www.ormfoundation.org/Default.aspx">The ORM Foundation</a>. A series of laboratory tutorials on NORMA are also downloadable as Microsoft Powerpoint files using the links below, or from the ORM Foundation library. <i>For NORMA using Visual Studio 2017, 2019 or 2022, use NORMA_Lab1_new, and for earlier versions use NORMA_Lab1<i/>. Here is an <a href="http://www.ormfoundation.org/files/">ORM Foundation link to NORMA</a>, and here is a <a href="http://sourceforge.net/projects/orm" target="_top">SourceForge link to NORMA</a>. </font></p>
+			<p><font face="Verdana"><b>(1) NORMA</b> (Natural ORM Architect) is a modeling tool under development that supports the next generation of ORM (ORM 2). Implemented as an open-source plug-in to Microsoft&#39;s Visual Studio .NET, NORMA also runs as a plug-in to a free Community Edition of Visual Studio (2013 or later -- see home page for more details). For further details on the ORM 2 graphical notation, see <a href="pdf/ORM2_TechReport1.pdf" target="_blank">ORM 2 Technical Report 1</a>. A series of laboratory tutorials on NORMA are also downloadable as Microsoft Powerpoint files using the links below. <i>For NORMA using Visual Studio 2017, 2019 or 2022, use NORMA_Lab1_new, and for earlier versions use NORMA_Lab1<i/>. Here is a <a href="https://github.com/ormsolutions/NORMA" target="_top">link to NORMA</a>. </font></p>
 
 			<p><font face="Verdana">
 			<a href="ppt/NORMA_Lab1_new.pptx" target="_blank">NORMA Lab 1 new</a><br />
@@ -376,9 +376,6 @@ amp;&#13;&#10;&#13;&#10;amp;&#13;&#10;&#13;&#10;amp;&#13;&#10;&#13;&#10;amp;&#13
 
 			<p><font face="Verdana"><a href="http://www.andycarverconsulting.com/">Dr Andy Carver</a> is an ORM consultant and experienced educator, currently teaching at INTI International University, Malaysia. He recently made substantial upgrades to the <a href="http://www.ormfoundation.org/files/folders/visio_stencils/default.aspx">ORM 2 Draw stencil</a> for drawing ORM 2 diagrams in Visio. </font></p>
 
-			<p><font face="Verdana"><b><font size="+1">Ken Evans, MSc</font></b> </font></p>
-
-			<p><font face="Verdana">Ken Evans is the Director of <a href="http://www.ormfoundation.org/Default.aspx">The ORM Foundation</a>, a Visiting Senior Research Fellow at the <a href="http://www.lincoln.ac.uk/socs/staff/kevans.htm">University of Lincoln</a> and a UK based independent consultant. In 2003, Ken co-authored the book <i>Database Modeling with Microsoft Visio for Enterprise Architects</i>. In 2008, Ken completed his Master&rsquo;s Degree in Information Systems Management with Liverpool University. His dissertation work included an experiment on the relative effectiveness of ORM based application development vis-&agrave;-vis other methods such as UML and ER. </font></p>
 
 			<p><font face="Verdana"><b><font size="+1">John Miller</font></b> </font></p>
 
