updated resources file

--- a/resources.html
+++ b/resources.html
@@ -88,7 +88,7 @@
 
 			<p><font face="Verdana">
 			<a href="ppt/NORMA_Lab1_new.pptx" target="_blank">NORMA Lab 1 new</a><br />
-			<a href="ppt/NORMA_Lab1.ppt" target="_blank">NORMA Lab 1</a><br />
+			<a href="ppt/NORMA_Lab1.pptx" target="_blank">NORMA Lab 1</a><br />
 			<a href="ppt/NORMA_Lab2.ppt" target="_blank">NORMA Lab 2</a><br />
 			<a href="ppt/NORMA_Lab3.ppt" target="_blank">NORMA Lab 3</a><br />
 			<a href="ppt/NORMA_Lab4.ppt" target="_blank">NORMA Lab 4</a><br />
