updated homepage file

--- a/homepage.html
+++ b/homepage.html
@@ -80,7 +80,7 @@
 			<p><font face="Verdana"><a name="new"><b>What&#39;s new?</b></a> </font></p>
       
       <p><font face="Verdana"><font face="Verdana"><a name="updates"><b>Recent Updates log</b></a>:<br />  
-      <p><font face="Verdana">Minor update to NORMA_Lab1 and NORMA_Lab1_new (see Resources page). </font></font></p>  
+      <p><font face="Verdana">Minor update to NORMA_Lab1 and NORMA_Lab1_new (see the Resources page). </font></font></p> 
       
    <p><font face="Verdana">Updated links to the NORMA tool and removed details about the ORM Foundation (this page and Resources page)</i>. </font></p>    
    
