--- a/homepage.html
+++ b/homepage.html
@@ -206,7 +206,8 @@
 
 			<p><font face="Verdana"><font face="Verdana"><a name="updates"><b>Recent Updates log</b></a>:<br />
 			<font size="-1"> 
-      <p><font face="Verdana">2025 July 24: Minor update to NORMA_Lab1 and NORMA_Lab1_new (see Resources page). </br/>  
+      <p><font face="Verdana">2025 August 29: Updated errata file for <i>3rd edition of Information Modeling and Relational Databases</i>, and author details (this page).   .<br />
+      2025 July 24: Minor update to NORMA_Lab1 and NORMA_Lab1_new (see Resources page). </br/>  
       <font face="Verdana">2025 July 23: Updated links to the NORMA tool and removed details about the ORM Foundation (this page and Resources page)</i>. .<br />   
       2025 July 20: Updated errata file for <i>3rd edition of Information Modeling and Relational Databases</i>, and author details (this page).   .<br />
       2025 April 24: Added notice about the passing of Ken Evans </i> (this page).<br />
